--- a/C#/ExemploMVC/Views/Home/Privacy.cshtml
+++ b/C#/ExemploMVC/Views/Home/Privacy.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Política de Privacidade";
 }
 <h1>@ViewData["Title"]</h1>
+<p>@ViewData["Message"]</p>
 
 <p>Use this page to detail your site's privacy policy.</p>
