--- a/C#/ExemploMVC/Views/Home/Privacy.cshtml
+++ b/C#/ExemploMVC/Views/Home/Privacy.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
-    ViewData["Title"] = "Política de Privacidade";
+    ViewData["Title"] = "Cadastro";
 }
 <h1>@ViewData["Title"]</h1>
 <p>@ViewData["Message"]</p>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>Aqui irei cadastrar algumas pessoas.</p>
